# internal/routers/user/user.router.go
@@ -2,13 +2,15 @@ package user
 
 import (
 	"github.com/buiminhhoat/go-ecommerce-backend-api/internal/controller/account"
+	"github.com/buiminhhoat/go-ecommerce-backend-api/internal/middlewares"
+	"github.com/buiminhhoat/go-ecommerce-backend-api/internal/wire"
 	"github.com/gin-gonic/gin"
 )
 
 type UserRouter struct{}
 
 func (ur *UserRouter) InitUserRouter(Router *gin.RouterGroup) {
-	// userController, _ := wire.InitUserRouterHandler()
+	userController, _ := wire.InitUserRouterHandler()
 	userRouterPublic := Router.Group("/user")
 	{
 		userRouterPublic.POST("/register", account.Login.Register)
@@ -18,10 +20,12 @@ func (ur *UserRouter) InitUserRouter(Router *gin.RouterGroup) {
 	}
 
 	userRouterPrivate := Router.Group("/user")
+	userRouterPrivate.Use(middlewares.AuthenMiddleware())
 	// userRouterPrivate.Use(limiter())
 	// userRouterPrivate.Use(Authen())
 	// userRouterPrivate.Use(Permission())
 	{
-		userRouterPrivate.GET("/get_info")
+		userRouterPrivate.GET("/get_info", userController.Register)
+		userRouterPrivate.POST("/two-factor/setup", account.TwoFA.SetupTwoFactorAuth)
 	}
 }
